--- a/TaxiApplication/TaxiApplication/Views/Shared/_Layout.cshtml
+++ b/TaxiApplication/TaxiApplication/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     @* <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/> *@
     @* <script type="javascript" src="~/lib/bootstrap/dist/js/bootstrap.js"></script> *@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     @* <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/> *@
     <link rel="stylesheet" href="~/TaxiApplication.styles.css" asp-append-version="true"/>
 </head>
@@ -14,33 +15,18 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
         <div class="container-fluid">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TaxiApplication</a>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Map">TaxiApplication</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
-                    @* <li class="nav-item"> *@
-                    @*     <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a> *@
-                    @* </li> *@
-                    @* <li class="nav-item"> *@
-                    @*     <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> *@
-                    @* </li> *@
                     <li class="nav-item">
                         <a class="nav-link btn btn-primary" asp-area="" asp-controller="Home" asp-action="Map">Map</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav flex-grow-1 justify-content-end" id="auth">
-                    <li class="nav-item">
-                        <a class=" nav-link btn btn-primary mx-2" asp-area="" asp-controller="Home" asp-action="SignIn">SingIn</a>
-                    </li>
-                    <li class="nav-item align-content-end">
-                        <a class="nav-link btn btn-primary mx-2" asp-area="" asp-controller="Home" asp-action="LogIn">LogIn</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class=" nav-link btn btn-primary mx-2" onclick="logout()" asp-area="" >Logout</a>
-                    </li>
+                <ul class="navbar-nav flex-grow-1 justify-content-end" id="auth" >
                 </ul>
             </div>
         </div>
@@ -49,6 +35,7 @@
 <div class="container ">
     <main role="main" class="pb-3 mt-3">
         @RenderBody()
+        <div id="tooltips"></div>
     </main>
 </div>
 
